syntax = "proto3";

package authservice.api.v1;

import "user.proto";

option go_package = "authservice";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
    rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  int64 expires_in = 2;
}

message AuthenticateRequest {
  string access_token = 1;
}

message AuthenticateResponse {
  User user = 1;
}

message AuthorizeRequest {
  string access_token = 1;
  repeated string required_permissions = 2;
}

message AuthorizeResponse {}

message LogoutRequest {
  string access_token = 1;
}

